--- a/html/reserva_de_armarios.html
+++ b/html/reserva_de_armarios.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva de Armário</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script src="../js/lockerReservation.js" defer></script>
 </head>
 <body>
     <div class="container">
