--- a/html/dashboard_inatel.html
+++ b/html/dashboard_inatel.html
@@ -70,20 +70,21 @@
             </section>
 
             <section class="news-section">
-                <div class="main-news-container">
-                    <h2 class="arimo-bold">Notícia 1</h2>
-                    <p class="arimo-normal">Descrição da notícia</p>
-                </div>
-
-                <div class="news-controls">
-                    <button class="news-control arimo-bold">
-                        <span class="material-symbols-outlined">arrow_back_ios</span>
-                        Anterior
-                    </button>
-                    <button class="news-control arimo-bold">
-                        Próxima
-                        <span class="material-symbols-outlined">arrow_forward_ios</span>
-                    </button>
+                <div class="carousel-container">
+                    <div class="carousel">
+                        <div class="carousel-item">
+                            <img src="${event.image}" alt="${event.title}">
+                            <div class="info">
+                                <h3>${event.title}</h3>
+                                <p>${event.description}</p>
+                                <p><span class="material-symbols-outlined icon">event</span> ${event.date} às ${event.time} <span class="material-symbols-outlined icon">pin_drop</span> ${event.location}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-btns">
+                        <button class="carousel-btn" id="prevBtn">❮</button>
+                        <button class="carousel-btn" id="nextBtn">❯</button>
+                    </div>
                 </div>
             </section>
         </main>
