--- a/html/dashboard_inatel.html
+++ b/html/dashboard_inatel.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <script src="../js/dashboard.js" defer></script>
+    <script src="../js/componente.js"></script>
 
     <header class="header">
         <div class="header-container">
@@ -55,18 +56,7 @@
             </section>
 
             <section class="classes-section">
-                <div class="class-container">
-                    <div>
-                        <h3 class="arimo-bold">Disciplina</h3>
-                        <p class="arimo-normal">Sala e Horário</p>
-                    </div>
-
-                    <div class="class-cards">
-                        <div class="class-card arimo-normal">Card 1</div>
-                        <div class="class-card arimo-normal">Card 2</div>
-                        <div class="class-card arimo-normal">Card 3</div>
-                    </div>
-                </div>
+                <aulas-component id="componente"></aulas-component>
             </section>
 
             <section class="news-section">
