add some styling

--- a/html/position.html
+++ b/html/position.html
@@ -7,6 +7,7 @@
     <title>Position Details</title>
     <link rel="stylesheet" href="../css/dashboard_inatel.css">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/position.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="../js/menu.js" defer></script>
@@ -16,9 +17,8 @@
 <body>
     <main>
         <div class="notification-item card" style="max-width:500px;margin:auto;">
-            <div id="position-details" class="notification-content card-content" style="width:100%"></div>
+            <div id="position-details" class="card-content"></div>
         </div>
     </main>
 </body>
-
 </html>
