--- a/html/apply.html
+++ b/html/apply.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Aplicação</title>
     <link rel="stylesheet" href="../css/dashboard_inatel.css">
+    <link rel="stylesheet" href="../css/apply.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -17,8 +18,8 @@
 
 <body>
     <main>
-        <h2 class="arimo-bold">Apply</h2>
-        <div class="card" style="max-width:500px;margin:auto;">
+        <div class="card">
+            <div class="position-details"></div>
             <form id="apply-form" class="card-content">
                 <input class="arimo-normal" type="email" id="email" placeholder="Email" required><br>
                 <input class="arimo-normal" type="text" id="fullname" placeholder="Full name" required><br>
