--- a/html/positions.html
+++ b/html/positions.html
@@ -7,6 +7,7 @@
     <title>Positions List</title>
     <link rel="stylesheet" href="../css/dashboard_inatel.css">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/positions.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="../js/menu.js" defer></script>
