--- a/html/applications.html
+++ b/html/applications.html
@@ -7,8 +7,12 @@
     <title>Listagem de Aplicações</title>
     <link rel="stylesheet" href="../css/dashboard_inatel.css">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/applications.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <script src="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.js.iife.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.css" />
     <script src="../js/menu.js" defer></script>
     <script src="../js/applications.js" type="module" defer></script>
 </head>
