--- a/html/position.html
+++ b/html/position.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="../css/position.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <script src="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.js.iife.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.css"/>
+
     <script src="../js/menu.js" defer></script>
     <script src="../js/position.js" type="module" defer></script>
 </head>
