feat: add some translations

--- a/html/applications.html
+++ b/html/applications.html
@@ -19,7 +19,7 @@
 
 <body>
     <main>
-        <h2 class="arimo-bold">Applications</h2>
+        <h2 class="arimo-bold">Minhas aplicações</h2>
         <div id="applications-list-container"></div>
     </main>
 </body>
