--- a/html/apply.html
+++ b/html/apply.html
@@ -22,7 +22,7 @@
             <div class="position-details"></div>
             <form id="apply-form" class="card-content">
                 <input class="arimo-normal" type="email" id="email" placeholder="Email" required><br>
-                <input class="arimo-normal" type="text" id="fullname" placeholder="Full name" required><br>
+                <input class="arimo-normal" type="text" id="fullname" placeholder="Nome completo" required><br>
                 <select class="arimo-normal" id="resume" required></select><br>
                 <button class="big-btn" type="submit">Enviar Aplicação</button>
             </form>
