--- a/html/resumes.html
+++ b/html/resumes.html
@@ -19,7 +19,7 @@
 
 <body>
     <main>
-        <h2 class="arimo-bold">Resumes</h2>
+        <h2 class="arimo-bold">Resumès</h2>
         <div id="resumes-list-container"></div>
     </main>
     <!-- Upload Resume Button -->
@@ -29,17 +29,17 @@
     <!-- Modal for Upload -->
     <div id="upload-resume-modal" class="upload-modal hidden">
         <form id="upload-resume-form" class="upload-form" enctype="multipart/form-data">
-            <h3 class="arimo-bold">Upload Resume</h3>
+            <h3 class="arimo-bold">Upload de Resumè</h3>
             <label>
-                Title:
+                Título:
                 <input type="text" id="resume-title" required>
             </label>
             <label>
-                Description:
+                Descrição:
                 <input type="text" id="resume-description" required>
             </label>
             <label>
-                PDF File:
+                Arquivo do Currículo (PDF):
                 <input type="file" id="resume-file" accept="application/pdf" required>
             </label>
             <div class="upload-actions">
